# FairSplit

./: README.md  pyproject.toml
src/FairSplit/: __init__.py  cli.py  io_utils.py  ledger.py  main.py  models.py  money.py  optimizer.py  utils.py
tests/: test_ledger.py  test_models.py  test_money.py  test_optimizer.py
tests/data/: sample_expenses.json
