[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fairsplit"
version = "0.1.0"
description = "Fair and optimized cost sharing calculator with minimal settlement transfers."
readme = "README.md"
authors = [{ name = "Mobin Yousefi", email = "" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6.0",
  "black>=24.8.0",
]

[project.scripts]
fairsplit = "fairsplit.main:run"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "W"]
ignore = ["E203", "E501"]